# s3tool

./: .gitignore  LICENSE  README.md  pyproject.toml
s3tool/: __init__.py  cli.py  s3ops.py
