[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3tool"
version = "0.1.0"
description = "Small CLI to get S3 bucket size/object count and upload/download objects"
readme = "README.md"
authors = [{ name = "You" }]
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.34",
  "click>=8.1",
]

[project.scripts]
s3tool = "s3tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["s3tool*"]
